// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterDateRangeContent /> should not crash if min equals max 1`] = `
Array [
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "system.timeCreated",
        "type": "date",
        "values": Object {},
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "system.timeCreated",
          "type": "date",
          "values": Object {},
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
}

.emotion-2 {
  padding: 4px;
}

.emotion-3 {
  padding-top: 40px;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-5 {
  position: absolute;
  right: 6px;
  top: 10px;
  pointer-events: none;
}

.emotion-6 {
  text-align: center;
  padding-left: 2px;
  padding-right: 2px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid transparent;
  border-radius: 2px;
  background-color: #252525;
  color: #ffffff;
}

.emotion-6:hover {
  border: 1px solid #808080;
}

.emotion-6:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
}

.emotion-6::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-6::-moz-placeholder {
  font-style: italic;
}

.emotion-6:-ms-input-placeholder {
  font-style: italic;
}

.emotion-6::placeholder {
  font-style: italic;
}

.emotion-6::-webkit-datetime-edit-month-field,
.emotion-6::-webkit-datetime-edit-day-field,
.emotion-6::-webkit-datetime-edit-year-field {
  color: #ffffff;
}

.emotion-7 {
  width: 16px;
  border-bottom: 2px solid white;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <span>
        05/04/2020
      </span>
      <span>
        05/04/2020
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <Slider
        domain={
          Array [
            1588550400000,
            1588550400001,
          ]
        }
        isDisabled={false}
        isMuted={false}
        mode="both"
        onChange={[Function]}
        onUpdate={[Function]}
        step={86400000}
        values={
          Array [
            1588550400000,
            1588550400001,
          ]
        }
      />
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-4"
      >
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="calendar.svg"
          height={18}
        />
        <input
          className="emotion-6"
          max="2020-05-04"
          min="2020-05-04"
          onBlur={[Function]}
          onChange={[Function]}
          type="date"
          value="2020-05-04"
        />
      </label>
      <div
        className="emotion-7"
      />
      <label
        className="emotion-4"
      >
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="calendar.svg"
          height={18}
        />
        <input
          className="emotion-6"
          max="2020-05-04"
          min="2020-05-04"
          onBlur={[Function]}
          onChange={[Function]}
          type="date"
          value="2020-05-04"
        />
      </label>
    </div>
  </div>,
]
`;

exports[`<FilterDateRangeContent /> should render with dates and reset 1`] = `
Array [
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "system.timeCreated",
        "type": "date",
        "values": Object {
          "max": "2020-06-10",
          "min": "2020-05-04",
        },
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "system.timeCreated",
          "type": "date",
          "values": Object {
            "max": "2020-06-10",
            "min": "2020-05-04",
          },
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
}

.emotion-2 {
  padding: 4px;
}

.emotion-3 {
  padding-top: 40px;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-5 {
  position: absolute;
  right: 6px;
  top: 10px;
  pointer-events: none;
}

.emotion-6 {
  text-align: center;
  padding-left: 2px;
  padding-right: 2px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid transparent;
  border-radius: 2px;
  background-color: #252525;
  color: #ffffff;
}

.emotion-6:hover {
  border: 1px solid #808080;
}

.emotion-6:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
}

.emotion-6::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-6::-moz-placeholder {
  font-style: italic;
}

.emotion-6:-ms-input-placeholder {
  font-style: italic;
}

.emotion-6::placeholder {
  font-style: italic;
}

.emotion-6::-webkit-datetime-edit-month-field,
.emotion-6::-webkit-datetime-edit-day-field,
.emotion-6::-webkit-datetime-edit-year-field {
  color: #ffffff;
}

.emotion-7 {
  width: 16px;
  border-bottom: 2px solid white;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <span>
        05/04/2020
      </span>
      <span>
        06/10/2020
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <Slider
        domain={
          Array [
            1588550400000,
            1591747200000,
          ]
        }
        isDisabled={false}
        isMuted={false}
        mode="both"
        onChange={[Function]}
        onUpdate={[Function]}
        step={86400000}
        values={
          Array [
            1588550400000,
            1591747200000,
          ]
        }
      />
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-4"
      >
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="calendar.svg"
          height={18}
        />
        <input
          className="emotion-6"
          max="2020-06-10"
          min="2020-05-04"
          onBlur={[Function]}
          onChange={[Function]}
          type="date"
          value="2020-05-04"
        />
      </label>
      <div
        className="emotion-7"
      />
      <label
        className="emotion-4"
      >
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="calendar.svg"
          height={18}
        />
        <input
          className="emotion-6"
          max="2020-06-10"
          min="2020-05-04"
          onBlur={[Function]}
          onChange={[Function]}
          type="date"
          value="2020-06-10"
        />
      </label>
    </div>
  </div>,
]
`;

exports[`<FilterDateRangeContent /> should render with dates and reset 2`] = `
Array [
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "system.timeCreated",
        "type": "date",
        "values": Object {
          "max": "2020-06-10",
          "min": "2020-05-04",
        },
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "system.timeCreated",
          "type": "date",
          "values": Object {
            "max": "2020-06-10",
            "min": "2020-05-04",
          },
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
}

.emotion-2 {
  padding: 4px;
}

.emotion-3 {
  padding-top: 40px;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-5 {
  position: absolute;
  right: 6px;
  top: 10px;
  pointer-events: none;
}

.emotion-6 {
  text-align: center;
  padding-left: 2px;
  padding-right: 2px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid transparent;
  border-radius: 2px;
  background-color: #252525;
  color: #ffffff;
}

.emotion-6:hover {
  border: 1px solid #808080;
}

.emotion-6:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
}

.emotion-6::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-6::-moz-placeholder {
  font-style: italic;
}

.emotion-6:-ms-input-placeholder {
  font-style: italic;
}

.emotion-6::placeholder {
  font-style: italic;
}

.emotion-6::-webkit-datetime-edit-month-field,
.emotion-6::-webkit-datetime-edit-day-field,
.emotion-6::-webkit-datetime-edit-year-field {
  color: #ffffff;
}

.emotion-7 {
  width: 16px;
  border-bottom: 2px solid white;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <span>
        05/04/2020
      </span>
      <span>
        06/10/2020
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <Slider
        domain={
          Array [
            1588550400000,
            1591747200000,
          ]
        }
        isDisabled={false}
        isMuted={false}
        mode="both"
        onChange={[Function]}
        onUpdate={[Function]}
        step={86400000}
        values={
          Array [
            1588636800000,
            1591747200000,
          ]
        }
      />
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-4"
      >
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="calendar.svg"
          height={18}
        />
        <input
          className="emotion-6"
          max="2020-06-10"
          min="2020-05-04"
          onBlur={[Function]}
          onChange={[Function]}
          type="date"
          value="2020-05-05"
        />
      </label>
      <div
        className="emotion-7"
      />
      <label
        className="emotion-4"
      >
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="calendar.svg"
          height={18}
        />
        <input
          className="emotion-6"
          max="2020-06-10"
          min="2020-05-05"
          onBlur={[Function]}
          onChange={[Function]}
          type="date"
          value="2020-06-10"
        />
      </label>
    </div>
  </div>,
]
`;

exports[`<FilterDateRangeContent /> should render with dates and reset 3`] = `
Array [
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "system.timeCreated",
        "type": "date",
        "values": Object {
          "max": "2020-06-10",
          "min": "2020-05-04",
        },
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "system.timeCreated",
          "type": "date",
          "values": Object {
            "max": "2020-06-10",
            "min": "2020-05-04",
          },
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
}

.emotion-2 {
  padding: 4px;
}

.emotion-3 {
  padding-top: 40px;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-5 {
  position: absolute;
  right: 6px;
  top: 10px;
  pointer-events: none;
}

.emotion-6 {
  text-align: center;
  padding-left: 2px;
  padding-right: 2px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid transparent;
  border-radius: 2px;
  background-color: #252525;
  color: #ffffff;
}

.emotion-6:hover {
  border: 1px solid #808080;
}

.emotion-6:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
}

.emotion-6::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-6::-moz-placeholder {
  font-style: italic;
}

.emotion-6:-ms-input-placeholder {
  font-style: italic;
}

.emotion-6::placeholder {
  font-style: italic;
}

.emotion-6::-webkit-datetime-edit-month-field,
.emotion-6::-webkit-datetime-edit-day-field,
.emotion-6::-webkit-datetime-edit-year-field {
  color: #ffffff;
}

.emotion-7 {
  width: 16px;
  border-bottom: 2px solid white;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <span>
        05/04/2020
      </span>
      <span>
        06/10/2020
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <Slider
        domain={
          Array [
            1588550400000,
            1591747200000,
          ]
        }
        isDisabled={false}
        isMuted={false}
        mode="both"
        onChange={[Function]}
        onUpdate={[Function]}
        step={86400000}
        values={
          Array [
            1588636800000,
            1591747200000,
          ]
        }
      />
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-4"
      >
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="calendar.svg"
          height={18}
        />
        <input
          className="emotion-6"
          max="2020-06-10"
          min="2020-05-04"
          onBlur={[Function]}
          onChange={[Function]}
          type="date"
          value="2020-05-05"
        />
      </label>
      <div
        className="emotion-7"
      />
      <label
        className="emotion-4"
      >
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="calendar.svg"
          height={18}
        />
        <input
          className="emotion-6"
          max="2020-06-10"
          min="2020-05-05"
          onBlur={[Function]}
          onChange={[Function]}
          type="date"
          value="2020-06-10"
        />
      </label>
    </div>
  </div>,
]
`;

exports[`<FilterDateRangeContent /> should render with dates and reset 4`] = `
Array [
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "system.timeCreated",
        "type": "date",
        "values": Object {
          "max": "2020-06-10",
          "min": "2020-05-04",
        },
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "system.timeCreated",
          "type": "date",
          "values": Object {
            "max": "2020-06-10",
            "min": "2020-05-04",
          },
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
}

.emotion-2 {
  padding: 4px;
}

.emotion-3 {
  padding-top: 40px;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-5 {
  position: absolute;
  right: 6px;
  top: 10px;
  pointer-events: none;
}

.emotion-6 {
  text-align: center;
  padding-left: 2px;
  padding-right: 2px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid transparent;
  border-radius: 2px;
  background-color: #252525;
  color: #ffffff;
}

.emotion-6:hover {
  border: 1px solid #808080;
}

.emotion-6:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
}

.emotion-6::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-6::-moz-placeholder {
  font-style: italic;
}

.emotion-6:-ms-input-placeholder {
  font-style: italic;
}

.emotion-6::placeholder {
  font-style: italic;
}

.emotion-6::-webkit-datetime-edit-month-field,
.emotion-6::-webkit-datetime-edit-day-field,
.emotion-6::-webkit-datetime-edit-year-field {
  color: #ffffff;
}

.emotion-7 {
  width: 16px;
  border-bottom: 2px solid white;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <span>
        05/04/2020
      </span>
      <span>
        06/10/2020
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <Slider
        domain={
          Array [
            1588550400000,
            1591747200000,
          ]
        }
        isDisabled={false}
        isMuted={false}
        mode="both"
        onChange={[Function]}
        onUpdate={[Function]}
        step={86400000}
        values={
          Array [
            1588550400000,
            1591747200000,
          ]
        }
      />
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-4"
      >
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="calendar.svg"
          height={18}
        />
        <input
          className="emotion-6"
          max="2020-06-10"
          min="2020-05-04"
          onBlur={[Function]}
          onChange={[Function]}
          type="date"
          value="2020-05-04"
        />
      </label>
      <div
        className="emotion-7"
      />
      <label
        className="emotion-4"
      >
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="calendar.svg"
          height={18}
        />
        <input
          className="emotion-6"
          max="2020-06-10"
          min="2020-05-04"
          onBlur={[Function]}
          onChange={[Function]}
          type="date"
          value="2020-06-10"
        />
      </label>
    </div>
  </div>,
]
`;

exports[`<FilterDateRangeContent /> should render with dates and reset 5`] = `
Array [
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "system.timeCreated",
        "type": "date",
        "values": Object {
          "max": "2020-06-10",
          "min": "2020-05-04",
        },
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "system.timeCreated",
          "type": "date",
          "values": Object {
            "max": "2020-06-10",
            "min": "2020-05-04",
          },
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
}

.emotion-2 {
  padding: 4px;
}

.emotion-3 {
  padding-top: 40px;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-5 {
  position: absolute;
  right: 6px;
  top: 10px;
  pointer-events: none;
}

.emotion-6 {
  text-align: center;
  padding-left: 2px;
  padding-right: 2px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid transparent;
  border-radius: 2px;
  background-color: #252525;
  color: #ffffff;
}

.emotion-6:hover {
  border: 1px solid #808080;
}

.emotion-6:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
}

.emotion-6::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-6::-moz-placeholder {
  font-style: italic;
}

.emotion-6:-ms-input-placeholder {
  font-style: italic;
}

.emotion-6::placeholder {
  font-style: italic;
}

.emotion-6::-webkit-datetime-edit-month-field,
.emotion-6::-webkit-datetime-edit-day-field,
.emotion-6::-webkit-datetime-edit-year-field {
  color: #ffffff;
}

.emotion-7 {
  width: 16px;
  border-bottom: 2px solid white;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <span>
        05/04/2020
      </span>
      <span>
        06/10/2020
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <Slider
        domain={
          Array [
            1588550400000,
            1591747200000,
          ]
        }
        isDisabled={false}
        isMuted={false}
        mode="both"
        onChange={[Function]}
        onUpdate={[Function]}
        step={86400000}
        values={
          Array [
            1588723200000,
            1591747200000,
          ]
        }
      />
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-4"
      >
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="calendar.svg"
          height={18}
        />
        <input
          className="emotion-6"
          max="2020-06-10"
          min="2020-05-04"
          onBlur={[Function]}
          onChange={[Function]}
          type="date"
          value="2020-05-06"
        />
      </label>
      <div
        className="emotion-7"
      />
      <label
        className="emotion-4"
      >
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="calendar.svg"
          height={18}
        />
        <input
          className="emotion-6"
          max="2020-06-10"
          min="2020-05-06"
          onBlur={[Function]}
          onChange={[Function]}
          type="date"
          value="2020-06-10"
        />
      </label>
    </div>
  </div>,
]
`;

exports[`<FilterDateRangeContent /> should render with dates and reset 6`] = `
Array [
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "system.timeCreated",
        "type": "date",
        "values": Object {
          "max": "2020-06-10",
          "min": "2020-05-04",
        },
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "system.timeCreated",
          "type": "date",
          "values": Object {
            "max": "2020-06-10",
            "min": "2020-05-04",
          },
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
}

.emotion-2 {
  padding: 4px;
}

.emotion-3 {
  padding-top: 40px;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-5 {
  position: absolute;
  right: 6px;
  top: 10px;
  pointer-events: none;
}

.emotion-6 {
  text-align: center;
  padding-left: 2px;
  padding-right: 2px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid transparent;
  border-radius: 2px;
  background-color: #252525;
  color: #ffffff;
}

.emotion-6:hover {
  border: 1px solid #808080;
}

.emotion-6:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
}

.emotion-6::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-6::-moz-placeholder {
  font-style: italic;
}

.emotion-6:-ms-input-placeholder {
  font-style: italic;
}

.emotion-6::placeholder {
  font-style: italic;
}

.emotion-6::-webkit-datetime-edit-month-field,
.emotion-6::-webkit-datetime-edit-day-field,
.emotion-6::-webkit-datetime-edit-year-field {
  color: #ffffff;
}

.emotion-7 {
  width: 16px;
  border-bottom: 2px solid white;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <span>
        05/04/2020
      </span>
      <span>
        06/10/2020
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <Slider
        domain={
          Array [
            1588550400000,
            1591747200000,
          ]
        }
        isDisabled={false}
        isMuted={false}
        mode="both"
        onChange={[Function]}
        onUpdate={[Function]}
        step={86400000}
        values={
          Array [
            1588723200000,
            1591574400000,
          ]
        }
      />
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-4"
      >
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="calendar.svg"
          height={18}
        />
        <input
          className="emotion-6"
          max="2020-06-08"
          min="2020-05-04"
          onBlur={[Function]}
          onChange={[Function]}
          type="date"
          value="2020-05-06"
        />
      </label>
      <div
        className="emotion-7"
      />
      <label
        className="emotion-4"
      >
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="calendar.svg"
          height={18}
        />
        <input
          className="emotion-6"
          max="2020-06-10"
          min="2020-05-06"
          onBlur={[Function]}
          onChange={[Function]}
          type="date"
          value="2020-06-08"
        />
      </label>
    </div>
  </div>,
]
`;

exports[`<FilterDateRangeContent /> should render with no data 1`] = `
Array [
  <FilterReset
    assetId=""
    filter={
      Object {
        "attribute": "system.timeCreated",
        "type": "date",
        "values": Object {},
      }
    }
    filterIndex={0}
    filters={
      Array [
        Object {
          "attribute": "system.timeCreated",
          "type": "date",
          "values": Object {},
        },
      ]
    }
    onReset={[Function]}
    pathname="/[projectId]/visualizer"
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
}

.emotion-2 {
  padding: 4px;
}

.emotion-3 {
  padding-top: 40px;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-5 {
  position: absolute;
  right: 6px;
  top: 10px;
  pointer-events: none;
}

.emotion-6 {
  text-align: center;
  padding-left: 2px;
  padding-right: 2px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid transparent;
  border-radius: 2px;
  background-color: #252525;
  color: #ffffff;
}

.emotion-6:hover {
  border: 1px solid #808080;
}

.emotion-6:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
}

.emotion-6::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-6::-moz-placeholder {
  font-style: italic;
}

.emotion-6:-ms-input-placeholder {
  font-style: italic;
}

.emotion-6::placeholder {
  font-style: italic;
}

.emotion-6::-webkit-datetime-edit-month-field,
.emotion-6::-webkit-datetime-edit-day-field,
.emotion-6::-webkit-datetime-edit-year-field {
  color: #ffffff;
}

.emotion-7 {
  width: 16px;
  border-bottom: 2px solid white;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <span>
        06/08/2020
      </span>
      <span>
        06/08/2020
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <Slider
        domain={
          Array [
            1591574400000,
            1591574400001,
          ]
        }
        isDisabled={false}
        isMuted={false}
        mode="both"
        onChange={[Function]}
        onUpdate={[Function]}
        step={86400000}
        values={
          Array [
            1591574400000,
            1591574400001,
          ]
        }
      />
    </div>
    <div
      className="emotion-3"
    >
      <label
        className="emotion-4"
      >
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="calendar.svg"
          height={18}
        />
        <input
          className="emotion-6"
          max="2020-06-08"
          min="2020-06-08"
          onBlur={[Function]}
          onChange={[Function]}
          type="date"
          value="2020-06-08"
        />
      </label>
      <div
        className="emotion-7"
      />
      <label
        className="emotion-4"
      >
        <svg
          className="emotion-5"
          color="#808080"
          data-file-name="calendar.svg"
          height={18}
        />
        <input
          className="emotion-6"
          max="2020-06-08"
          min="2020-06-08"
          onBlur={[Function]}
          onChange={[Function]}
          type="date"
          value="2020-06-08"
        />
      </label>
    </div>
  </div>,
]
`;
